Archive/6bd23deec2ba6fe5c8c6b9eaee8d4bcf-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:19:1: error: static assertion failed: B is a private base of A
 static_assert(std::is_base_of<B,A>(), "B is a private base of A");
 ^
main.cpp:20:1: error: static assertion failed: C is a virtual base of A
 static_assert(std::is_base_of<C,A>(), "C is a virtual base of A");
 ^
main.cpp:22:1: error: static assertion failed: B is a private base of A
 static_assert(is_base_of<B,A>(), "B is a private base of A");
 ^
main.cpp:23:1: error: static assertion failed: C is a virtual base of A
 static_assert(is_base_of<C,A>(), "C is a virtual base of A");
 ^
